--- a/index.html
+++ b/index.html
@@ -15,6 +15,31 @@
 
         background-color: #ececec;
         color: #000;
+
+        margin: 0;
+
+        display: grid;
+        grid-template-columns: 1fr, auto, 1fr;
+
+        grid-template-areas:
+          "header header header"
+          "hr hr hr"
+          "left-bar  content  right-bar";
+      }
+
+      .left-bar {
+        display: flex;
+        grid-area: left-bar;
+      }
+
+      .right-bar {
+        grid-area: right-bar;
+      }
+
+      hr {
+        grid-area: hr;
+        width: 100%;
+        margin: 0;
       }
 
       h1 {
@@ -56,10 +81,7 @@
       }
 
       header {
-        display: flex;
-        flex-direction: column;
-        gap: 1em;
-        align-items: start;
+        grid-area: header;
         background-color: #fff;
         padding: 1em;
 
@@ -69,9 +91,10 @@
       }
 
       code {
-        background-color: #aaa;
+        background-color: #ddd;
         font-family: "IBM Plex Mono", serif;
-        font-weight: 500;
+        font-weight: 400;
+        font-size: 0.9em;
         padding-left: 0.25em;
         padding-right: 0.25em;
         display: inline-block;
@@ -79,16 +102,16 @@
 
       main {
         margin: 1em;
+        grid-area: content;
+        max-width: 900px;
       }
 
       .content {
         max-width: 900px;
-        display: grid;
-        grid-template-columns: minmax(auto, 900px);
-        grid-template-rows: auto;
+        display: flex;
+        flex-direction: column;
+
         gap: 1em;
-        margin-left: auto;
-        margin-right: auto;
       }
 
       .icon-row {
@@ -130,10 +153,11 @@
     </style>
   </head>
   <body>
+    <div class="left-bar"></div>
     <header>
       <div class="content">
         <h1>Mark Pleskač</h1>
-        <div class="weight-100 size-2">Software Developer</div>
+        <span class="weight-100">Software Developer</span>
         <div class="icon-row">
           <a href="https://www.github.com/pleskac/" aria-label="Github">
             <svg
@@ -184,6 +208,7 @@
       </div>
     </header>
     <hr />
+
     <main>
       <div class="content">
         <section>
@@ -238,5 +263,6 @@
         </section>
       </div>
     </main>
+    <div class="right-bar"></div>
   </body>
 </html>
