--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         color: currentColor;
       }
 
-      p {
+      p,
+      ul {
         font-weight: 300;
         line-height: 1.5;
       }
@@ -217,22 +218,34 @@
           <div class="weight-100 margin">2018 - present</div>
           <div class="weight-700">Senior Software Engineer</div>
           <p>
-            <span class="weight-700">Design Systems (Front End)</span> -
-            Component implemenations, GitHub automator, product integrations,
-            migration author. Design tokens, theming, packages, accessibility,
-            performance, migrations, motion, and more. Typescript, React,
-            Storybook, Vite, Python. <br /><br />
-            Highlights include: introduction of a
-            <a href="https://motion.dev">motion library</a> for
-            <code>Menu</code> and <code>Drawer</code>, introduction of
-            <code>StyleDictionary</code> and creation of a
-            <code>ThemeProvider</code> to support dark mode, many accessible
-            components,
+            <span class="weight-700">Design Systems (Front End)</span>
           </p>
+          <ul>
+            <li>New component implementations</li>
+            <li>
+              Automation of Figma→GitHub, releases, breaking changes, and
+              notifications
+            </li>
+            <li>Inital design token setup with <code>StyleDictionary</code></li>
+            <li>
+              Test harness for testing multiple versions of <code>React</code>
+            </li>
+            <li>
+              Creation and integration of <code>ThemeProvider</code> for dark
+              mode support and theme refreshes
+            </li>
+            <li>
+              Swapped out <code>react-transition-group</code> for a new
+              <a href="https://motion.dev">motion library</a>. First implemented
+              in <code>Menu</code> and <code>Drawer</code> including a custom
+              hook for support across multiple versions of <code>React</code>.
+            </li>
+            <li>Technologies: Typescript, React, Storybook, Vite, motion</li>
+          </ul>
           <p>
             <span class="weight-700">Search and Browse (Full Stack)</span> -
-            Features and experiments in the web. Performance optimizations.
-            Typescript, React, Python.
+            Features and experiments in the web (navigation, Account Menu, drag
+            and drop). Performance optimizations. Typescript, React, Python.
           </p>
           <h3>Microsoft</h3>
           <div class="weight-100 margin">2013 - 2018</div>
