--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         display: grid;
         grid-template-columns: 1fr, auto, 1fr;
+        grid-template-rows: auto auto 1fr;
 
         grid-template-areas:
           "header header header"
