chore: update resume

--- a/index.html
+++ b/index.html
@@ -229,7 +229,13 @@
             </li>
             <li>Inital design token setup with <code>StyleDictionary</code></li>
             <li>
-              Test harness for testing multiple versions of <code>React</code>
+              Test harness for testing multiple versions of
+              <code>React</code> in CI and locally
+            </li>
+            <li>
+              While on loan to a special project, I created an internal AI
+              documentation site (front end and webserver), making all technical
+              decisions and handing off to an offshore team.
             </li>
             <li>
               Creation and integration of <code>ThemeProvider</code> for dark
@@ -245,21 +251,22 @@
           </ul>
           <p>
             <span class="weight-700">Search and Browse (Full Stack)</span> -
-            Features and experiments in the web (navigation, Account Menu, drag
-            and drop). Performance optimizations. Typescript, React, Python.
+            Features and experiments in the web on core Dropbox surfaces
+            (navigation, Account Menu, drag and drop, accessibility
+            improvements). Performance optimizations. Typescript, React, Python.
           </p>
           <h3>Microsoft</h3>
           <div class="weight-100 margin">2013 - 2018</div>
           <div class="weight-700">Software Engineer II (59 → 62)</div>
           <p>
             <span class="weight-700">Azure Boards (Full Stack)</span> - Worked
-            on the next generation of Azure Boards UI. Typescript, React, C#,
-            MSSQL.
+            on the next generation of Azure Boards UI building complete features
+            for work item tracking. Typescript, React, C#, MSSQL.
           </p>
           <p>
             <span class="weight-700">PowerApps (Back End)</span> - Distributed
-            logging and hosting infrastructure. Created Microsoft Flow
-            Connectors and infrastructure. C#, Docker, Kusto.
+            logging and hosting infrastructure. Distributed systems. Created
+            Microsoft Flow Connectors and infrastructure. C#, Docker, Kusto.
           </p>
           <p>
             <span class="weight-700">Dynamics (Back End)</span> - Performance
@@ -271,9 +278,10 @@
         <section>
           <h2>Education</h2>
           <h3>University of Nebraska</h3>
-          <p>Bachelors of Science in Computer Engineering</p>
-          <p>Raikes School of Computer Science and Mangement</p>
-          <p>Business Minor</p>
+          <p>
+            Bachelors of Science in Computer Engineering, Raikes School of
+            Computer Science and Mangement, Business Minor
+          </p>
         </section>
       </div>
     </main>
