chore: move things around

--- a/index.html
+++ b/index.html
@@ -159,9 +159,10 @@
     <header>
       <div class="content">
         <h1>Mark Pleskač</h1>
-        <span class="weight-100">markpleskac@gmail.com | Seattle, WA</span>
-        <span class="weight-100">Software Developer</span>
+
+        <span class="weight-100">Software Developer | Seattle, WA</span>
         <div class="icon-row">
+          <span class="weight-100">markpleskac@gmail.com</span>
           <a
             href="https://www.github.com/pleskac/"
             aria-label="Mark Pleskac on Github"
