--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <!-- A single file personal website by pleaskac -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mark Pleskac</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;200;300;400;500;600;700&display=swap");
