chore: add logos

--- a/index.html
+++ b/index.html
@@ -241,7 +241,21 @@
       <div class="content">
         <section>
           <h2>Experience</h2>
-          <h3>Dropbox</h3>
+          <h3>
+            <svg
+              role="presentation"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              fill="currentColor"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M8.01 4.555 4.005 7.11 8.01 9.665 4.005 12.22 0 9.651l4.005-2.555L0 4.555 4.005 2zm-4.026 8.487 4.006-2.555 4.005 2.555-4.005 2.555zm4.026-3.39 4.005-2.556L8.01 4.555 11.995 2 16 4.555 11.995 7.11 16 9.665l-4.005 2.555z"
+              />
+            </svg>
+            Dropbox
+          </h3>
           <div class="weight-100 margin">2018 - present</div>
           <div class="weight-700">Senior Software Engineer</div>
           <p>
@@ -281,7 +295,21 @@
             (navigation, Account Menu, drag and drop, accessibility
             improvements). Performance optimizations. Typescript, React, Python.
           </p>
-          <h3>Microsoft</h3>
+          <h3>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              fill="currentColor"
+              class="bi bi-microsoft"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M7.462 0H0v7.19h7.462zM16 0H8.538v7.19H16zM7.462 8.211H0V16h7.462zm8.538 0H8.538V16H16z"
+              />
+            </svg>
+            Microsoft
+          </h3>
           <div class="weight-100 margin">2013 - 2018</div>
           <div class="weight-700">Software Engineer II (59 → 62)</div>
           <p>
