--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         font-size: 1em;
         line-height: 1;
 
+        /* reserve space for scrolling*/
+        margin-right: 0.5em;
+
         background-color: #ececec;
         color: #000;
 
