--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         margin: 0;
 
         /* reserve space for scrolling*/
-        margin-right: 0.5em;
+        overflow-x: hidden;
 
         display: grid;
         grid-template-columns: 1fr, auto, 1fr;
