--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         color: #000;
 
         margin: 0;
+        margin-right: 1em;
 
         /* reserve space for scrolling*/
         overflow-x: hidden;
@@ -349,7 +350,7 @@
                 d="M273.13 84.56V26.73h-89.62v57.83h16.66v78.8L113.05 26.73H36.83v57.83h16.86v119.88H36.83v57.83h89.62v-57.83h-16.47v-78.55l86.94 136.38h76.21v-57.83h-16.66V84.56z"
               />
             </svg>
-            UNL
+            University of Nebraska
           </h3>
           <p>
             Bachelors of Science in Computer Engineering, Raikes School of
