--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         grid-area: header;
         background-color: #fff;
         padding: 1em;
+        width: 100dvw;
 
         font-family: "IBM Plex Mono", serif;
         font-weight: 400;
