--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mark Pleskac</title>
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;200;300;400;500;600;700&display=swap");
-      @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@200;300;400;700&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Lato:wght@200;300;400;700&display=swap");
     </style>
     <style>
       body {
@@ -139,8 +139,12 @@
         font-weight: 700;
       }
 
-      .weight-100 {
-        font-weight: 100;
+      .weight-300 {
+        font-weight: 300;
+      }
+
+      .weight-200 {
+        font-weight: 200;
       }
 
       .margin {
@@ -173,9 +177,9 @@
       <div class="content">
         <h1>Mark Pleskač</h1>
 
-        <span class="weight-100">Software Developer | Seattle, WA</span>
+        <span class="weight-200">Software Developer | Seattle, WA</span>
         <div class="flex-wrap-row">
-          <span class="weight-100">markpleskac@gmail.com</span>
+          <span class="weight-200">markpleskac@gmail.com</span>
           <div class="icon-row">
             <a
               href="https://www.github.com/pleskac/"
@@ -269,7 +273,7 @@
             </svg>
             Dropbox
           </h3>
-          <div class="weight-100 margin">2018 - present</div>
+          <div class="weight-300 margin">2018 - present</div>
           <div class="weight-700">Senior Software Engineer</div>
           <p>
             <span class="weight-700">Design Systems (Front End)</span>
@@ -323,7 +327,7 @@
             </svg>
             Microsoft
           </h3>
-          <div class="weight-100 margin">2013 - 2018</div>
+          <div class="weight-300 margin">2013 - 2018</div>
           <div class="weight-700">Software Engineer II (59 → 62)</div>
           <p>
             <span class="weight-700">Azure Boards (Full Stack)</span> - Worked
