chore: i quit to take a bit of time for myself

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             </svg>
             Dropbox
           </h3>
-          <div class="weight-300 margin">2018 - present</div>
+          <div class="weight-300 margin">2018 - 2025</div>
           <div class="weight-700">Senior Software Engineer</div>
           <p>
             <span class="weight-700">Design Systems (Front End)</span>
@@ -296,13 +296,15 @@
             </li>
             <li>
               Creation and integration of <code>ThemeProvider</code> for dark
-              mode support and theme refreshes
+              mode support in core dropbox.com and theme refreshes (2023 and
+              beyond).
             </li>
             <li>
               Swapped out <code>react-transition-group</code> for a new
               <a href="https://motion.dev">motion library</a>. First implemented
               in <code>Menu</code> and <code>Drawer</code> including a custom
               hook for support across multiple versions of <code>React</code>.
+              Eventually swapped all motion to the new library.
             </li>
             <li>Technologies: Typescript, React, Storybook, Vite, motion</li>
           </ul>
