chore: next thing

--- a/index.html
+++ b/index.html
@@ -258,6 +258,9 @@
       <div class="content">
         <section>
           <h2>Experience</h2>
+          <h3>Coming May 2025</h3>
+          <div class="weight-300 margin">2025 - present</div>
+          <span class="weight-700">Something exciting</span>
           <h3>
             <svg
               role="presentation"
@@ -330,7 +333,7 @@
             Microsoft
           </h3>
           <div class="weight-300 margin">2013 - 2018</div>
-          <div class="weight-700">Software Engineer II (59 → 62)</div>
+          <div class="weight-700">Software Engineer II</div>
           <p>
             <span class="weight-700">Azure Boards (Full Stack)</span> - Worked
             on the next generation of Azure Boards UI building complete features
