chore: desktop team!!

--- a/index.html
+++ b/index.html
@@ -277,6 +277,15 @@
           </h3>
           <div class="weight-300 margin">2025 - present</div>
           <div class="weight-700">Senior Software Engineer</div>
+          <p>
+            <span class="weight-700">Desktop</span>
+          </p>
+          <ul>
+            <li>
+              Electron.js desktop
+              <a href="https://www.figma.com/downloads/">app</a>
+            </li>
+          </ul>
           <h3>
             <svg
               role="presentation"
