--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -2,14 +2,27 @@
   <head>
     <title>Tic Tac Toe</title>
     <style>
-      .row {
+      .content {
         display: flex;
-        gap: 15px;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .gameGrid {
+        display: grid;
+        grid-template-columns: repeat(3, max-content);
+        grid-template-rows: repeat(4, max-content);
+        grid-column-gap: 15px;
+        grid-row-gap: 15px;
       }
 
       button {
         height: 40px;
         width: 40px;
+      }
+
+      .actions {
+        grid-area: 4 / 1 / 5 / 4;
       }
 
       .reset {
@@ -38,8 +51,8 @@
     </script>
   </head>
   <body>
-    <div style="display: flex; flex-direction: column; gap: 15px">
-      <div class="row">
+    <div class="content">
+      <div class="gameGrid">
         <button
           id="row1col1"
           class="ticTacToeButton"
@@ -55,8 +68,6 @@
           class="ticTacToeButton"
           onclick="onGameClick('row1col3')"
         ></button>
-      </div>
-      <div class="row">
         <button
           id="row2col1"
           class="ticTacToeButton"
@@ -72,8 +83,6 @@
           class="ticTacToeButton"
           onclick="onGameClick('row2col3')"
         ></button>
-      </div>
-      <div class="row">
         <button
           id="row3col1"
           class="ticTacToeButton"
@@ -89,8 +98,10 @@
           class="ticTacToeButton"
           onclick="onGameClick('row3col3')"
         ></button>
+        <div class="actions">
+          <button class="reset" onclick="onReset()">Reset</button>
+        </div>
       </div>
-      <button class="reset" onclick="onReset()">Reset</button>
     </div>
   </body>
 </html>
