--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -10,48 +10,86 @@
 
       .gameGrid {
         display: grid;
-        grid-template-columns: repeat(3, max-content);
-        grid-template-rows: repeat(4, max-content);
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, 1fr);
         grid-column-gap: 15px;
         grid-row-gap: 15px;
+        height: min(100dvh, 100dvh);
+        width: min(100dvh, 100dvh);
+      }
+      .ticTacToeButton {
+        aspect-ratio: 1;
+        height: 100%;
+        width: 100%;
       }
 
       button {
-        height: 40px;
-        width: 40px;
+        min-height: 40px;
+        width: 100%;
       }
 
       .actions {
         grid-area: 4 / 1 / 5 / 4;
+        aspect-ratio: auto;
       }
 
       .reset {
         margin-top: 20px;
         width: 100%;
       }
+
+      .winner-line {
+        width: 2px;
+        position: absolute;
+        height: 100%;
+        background-color: red;
+        display: none;
+      }
     </style>
     <script>
+      var numberOfTurns = 0;
       var currentTurn = "x";
+      var currentStateOfGame = [];
+
+      var winningCombos = [[0, 4, 8]];
+
+      const rowRegEx = new RegExp(/row(\d)/);
+      const colRegEx = new RegExp(/col(\d)/);
+
       var onGameClick = (id) => {
-        console.log(`'${currentTurn}' took a turn!`);
+        console.log(`'${currentTurn}' took a turn! Turn ${numberOfTurns}`);
+        numberOfTurns++;
         let currentButton = document.getElementById(id);
         currentButton.textContent = currentTurn;
         currentButton.setAttribute("disabled", "true");
+        calculateWinner(id, currentTurn);
         currentTurn = currentTurn === "x" ? "o" : "x";
       };
 
       var onReset = () => {
         currentTurn = "x";
+        numberOfTurns = 0;
+        currentStateOfGame = [];
         let allButtons = document.getElementsByClassName("ticTacToeButton");
         for (let b of allButtons) {
           b.textContent = "";
           b.removeAttribute("disabled");
         }
       };
+
+      var calculateWinner = (id, currTurn) => {
+        // somehow we calculate the winner
+        const row = id.match(rowRegEx)[1];
+        const col = id.match(colRegEx)[1];
+        currentStateOfGame[(row - 1) * 3 + (col - 1)] = currTurn;
+        console.log(currentStateOfGame);
+        // todo - figure out who won and then draw the red line
+      };
     </script>
   </head>
   <body>
     <div class="content">
+      <div class="winner-line"></div>
       <div class="gameGrid">
         <button
           id="row1col1"
