--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -17,10 +17,13 @@
         height: min(100dvh, 100dvh);
         width: min(100dvh, 100dvh);
       }
+
       .ticTacToeButton {
         aspect-ratio: 1;
         height: 100%;
         width: 100%;
+        color: black;
+        font-size: 200%;
       }
 
       button {
