--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -18,6 +18,8 @@
       }
 
       .gameGridWrapper {
+        max-width: min(100dvw, 100dvh);
+        max-height: min(100dvw, 100dvh);
         flex-grow: 1;
         flex-shrink: 1;
         flex-basis: 100%;
