--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -42,6 +42,14 @@
         width: 100%;
         color: black;
         font-size: 200%;
+        border-radius: 0;
+        outline: 1px solid #303030;
+        border: none;
+        background-color: #dedede88;
+      }
+
+      .ticTacToeButton:disabled {
+        background-color: transparent;
       }
 
       button {
